--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,8 @@
 body {
+  background: black;
+  background-image: url('/public/imagens/fundo.png');
+  width: 100%;
+  height: 100%;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
